@@ -107,9 +107,13 @@ public class TestDateTime_Properties extends TestCase {
         assertEquals(1, test.era().get());
         assertEquals("1", test.era().getAsString());
         assertEquals("AD", test.era().getAsText());
+        assertEquals("AD", test.era().getField().getAsText(1, Locale.ENGLISH));
         assertEquals("ap. J.-C.", test.era().getAsText(Locale.FRENCH));
+        assertEquals("ap. J.-C.", test.era().getField().getAsText(1, Locale.FRENCH));
         assertEquals("AD", test.era().getAsShortText());
+        assertEquals("AD", test.era().getField().getAsShortText(1, Locale.ENGLISH));
         assertEquals("ap. J.-C.", test.era().getAsShortText(Locale.FRENCH));
+        assertEquals("ap. J.-C.", test.era().getField().getAsShortText(1, Locale.FRENCH));
         assertEquals(test.getChronology().eras(), test.era().getDurationField());
         assertEquals(null, test.era().getRangeDurationField());
         assertEquals(2, test.era().getMaximumTextLength(null));
@@ -336,16 +340,22 @@ public class TestDateTime_Properties extends TestCase {
         assertEquals(6, test.monthOfYear().get());
         assertEquals("6", test.monthOfYear().getAsString());
         assertEquals("June", test.monthOfYear().getAsText());
+        assertEquals("June", test.monthOfYear().getField().getAsText(6, Locale.ENGLISH));
         assertEquals("juin", test.monthOfYear().getAsText(Locale.FRENCH));
+        assertEquals("juin", test.monthOfYear().getField().getAsText(6, Locale.FRENCH));
         assertEquals("Jun", test.monthOfYear().getAsShortText());
+        assertEquals("Jun", test.monthOfYear().getField().getAsShortText(6, Locale.ENGLISH));
         assertEquals("juin", test.monthOfYear().getAsShortText(Locale.FRENCH));
+        assertEquals("juin", test.monthOfYear().getField().getAsShortText(6, Locale.FRENCH));
         assertEquals(test.getChronology().months(), test.monthOfYear().getDurationField());
         assertEquals(test.getChronology().years(), test.monthOfYear().getRangeDurationField());
         assertEquals(9, test.monthOfYear().getMaximumTextLength(null));
         assertEquals(3, test.monthOfYear().getMaximumShortTextLength(null));
         test = new DateTime(2004, 7, 9, 0, 0, 0, 0);
         assertEquals("juillet", test.monthOfYear().getAsText(Locale.FRENCH));
+        assertEquals("juillet", test.monthOfYear().getField().getAsText(7, Locale.FRENCH));
         assertEquals("juil.", test.monthOfYear().getAsShortText(Locale.FRENCH));
+        assertEquals("juil.", test.monthOfYear().getField().getAsShortText(7, Locale.FRENCH));
         assertEquals(1, test.monthOfYear().getMinimumValue());
         assertEquals(1, test.monthOfYear().getMinimumValueOverall());
         assertEquals(12, test.monthOfYear().getMaximumValue());
@@ -914,9 +924,13 @@ public class TestDateTime_Properties extends TestCase {
         assertEquals(3, test.dayOfWeek().get());
         assertEquals("3", test.dayOfWeek().getAsString());
         assertEquals("Wednesday", test.dayOfWeek().getAsText());
+        assertEquals("Wednesday", test.dayOfWeek().getField().getAsText(3, Locale.ENGLISH));
         assertEquals("mercredi", test.dayOfWeek().getAsText(Locale.FRENCH));
+        assertEquals("mercredi", test.dayOfWeek().getField().getAsText(3, Locale.FRENCH));
         assertEquals("Wed", test.dayOfWeek().getAsShortText());
+        assertEquals("Wed", test.dayOfWeek().getField().getAsShortText(3, Locale.ENGLISH));
         assertEquals("mer.", test.dayOfWeek().getAsShortText(Locale.FRENCH));
+        assertEquals("mer.", test.dayOfWeek().getField().getAsShortText(3, Locale.FRENCH));
         assertEquals(test.getChronology().days(), test.dayOfWeek().getDurationField());
         assertEquals(test.getChronology().weeks(), test.dayOfWeek().getRangeDurationField());
         assertEquals(9, test.dayOfWeek().getMaximumTextLength(null));
